# rust_rocket_typeit

./: Cargo.toml  README.md
src/: lib.rs  main.rs
