[package]
name = "rust_rocket_typeit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.1.2"
rocket = "0.5.0-rc.1"
rocket_codegen = "0.5.0-rc.1"
tokio = { version = "1", features = ["full"] }

